--- a/html/promises.html
+++ b/html/promises.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body style="background-color: rgb(242, 244, 179);">
+    <!--navigation bar-->
     <ul>
         <li><a class="active" href="/index.html">Home</a></li>
         <li><a href="/html/callbacks.html">Callbacks</a></li>
@@ -18,12 +19,13 @@
         <li><a href="/html/async_await.html">Async/Await </a></li>
     </ul>
 
+    <!--required div-->
     <div id="promise">
         <h3>Post Titles</h3>
         <table id="tableContent">
-           
         </table>
     </div>
+    <!--required button-->
     <button id="promiseBtn">Click</button>
     
 </body>
