--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Asynchronous programming">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Sangita Saha">
-    <title>Asynchronous Programming</title>
+    <title>Asynchronous Programming Techniques</title>
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -18,7 +18,7 @@
         <li><a href="/html/async_await.html">Async/Await </a></li>
     </ul>
     <div id="indexContent">
-        <h1>Asynchronous programmimg</h1>
+        <h1>Asynchronous programmimg Techniques</h1>
         <h2>Callbacks, Promises, Async/Await</h2>
     </div>  
 </body>
