--- a/html/async_await.html
+++ b/html/async_await.html
@@ -11,20 +11,21 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body style="background-color: rgb(149, 223, 143);">
+    <!--navigation bar-->
     <ul>
         <li><a class="active" href="/index.html">Home</a></li>
         <li><a href="/html/callbacks.html">Callbacks</a></li>
         <li><a href="/html/promises.html">Promises</a></li>
         <li><a href="/html/async_await.html">Async/Await </a></li>
     </ul>
-
-    <div id="aa">
+    <!--required div-->
+    <div id="async">
         <h3>Post Titles</h3>
         <table id="tableContent">
-           
         </table>
     </div>
-    <button id="aaBtn">Click</button>
+    <!--required button-->
+    <button id="asyncBtn">Click</button>
     
 </body>
 </html>
